Home completed | Product List Completed | Search Function Added |Product detail display activity Added | Place Bid function
TODO: Seller

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">BidKart</string>
-    <string name="note">Note: Bidding will be unsuccessful if wallet amount is less than the bid amount</string>
+    <string name="note">Note: Bidding will be unsuccessful if wallet amount is less than 25% of the bid amount</string>
 </resources>
